Added css and navbar

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>William Connelly</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <p>Hello World</p>
+      <nav class="z-depth-0">
+        <div class="nav-wrapper z-depth-0">
+          <ul id="nav-mobile" class="right">
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Projects</a></li>
+          </ul>
+        </div>
+      </nav>
+    <h2>William Connelly</h2>
+    <p>Full-Stack Web Developer</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   </body>
 </html>
