Added about and projects pages

--- a/about.html
+++ b/about.html
@@ -18,8 +18,24 @@
         </ul>
       </div>
     </nav>
-    <h2>William Connelly</h2>
-    <p>Full-Stack Web Developer</p>
+    <h1>About Me</h1>
+    <h4>Technologies:</h4>
+    <ul>
+      <li>ES6</li>
+      <li>JavaScript</li>
+      <li>HTML5</li>
+      <li>CSS3</li>
+      <li>React</li>
+      <li>express</li>
+      <li>Node.js</li>
+      <li>Mongo</li>
+      <li>postgresql</li>
+      <li>SQL</li>
+      <li>Python</li>
+      <li>Django</li>
+      <li>Materialize</li>
+      <li>jQuery</li>
+    </ul>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   </body>
 </html>
