--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,24 @@
         </ul>
       </div>
     </nav>
-    <h2>William Connelly</h2>
-    <p>Full-Stack Web Developer</p>
+    <h1>Projects</h1>
+    <ul>
+      <li>JavaScript Game</li>
+      <li>- JavaScript</li>
+      <li>- jQuery</li>
+      <li>-CSS</li>
+      <li>-HTML</li>
+      <li>Movie Catalogue</li>
+      <li>-express</li>
+      <li>-node</li>
+      <li>-HTML</li>
+      <li>-CSS</li>
+      <li>-bcrypt</li>
+      <li>Punch Card App</li>
+      <li>Project 4</li>
+      <li>Hackathon(?)</li>
+    </ul>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   </body>
 </html>
