--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>William Connelly</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" 
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
+    crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -19,7 +23,13 @@
       </div>
     </nav>
     <h2>William Connelly</h2>
-    <p>Full-Stack Web Developer</p>
+    <h5>Full-Stack Web Developer</h5>
+    <span style="font-size: 3em;">
+      <i class="fab fa-github landing-icon"></i>
+      <i class="fab fa-linkedin landing-icon"></i>
+      <i class="fas fa-file-download landing-icon"></i>
+    </span>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
