Began adding tech icons

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         </ul>
       </div>
     </nav>
-    <h2>William Connelly</h2>
-    <h5>Full-Stack Web Developer</h5>
-    <span style="font-size: 3em;">
-      <i class="fab fa-github landing-icon"></i>
-      <i class="fab fa-linkedin landing-icon"></i>
-      <i class="fas fa-file-download landing-icon"></i>
-    </span>
+    <div class="container">
+      <h2>William Connelly</h2>
+      <h5>Full-Stack Web Developer</h5>
+      <span style="font-size: 3em;">
+        <a href="https://github.com/Williamconnelly"><i class="fab fa-github landing-icon"></i></a>
+        <a href="https://www.linkedin.com/in/williamrconnelly/"><i class="fab fa-linkedin landing-icon"></i></a>
+        <a href="#"><i class="fas fa-file-download landing-icon tooltipped" data-position="bottom" data-tooltip="Resume"></i></a>
+      </span>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="script.js"></script>
   </body>
