--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>William Connelly</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" 
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
+    crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -19,24 +22,17 @@
         </ul>
       </div>
     </nav>
-    <h1>Projects</h1>
-    <ul>
-      <li>JavaScript Game</li>
-      <li>- JavaScript</li>
-      <li>- jQuery</li>
-      <li>-CSS</li>
-      <li>-HTML</li>
-      <li>Movie Catalogue</li>
-      <li>-express</li>
-      <li>-node</li>
-      <li>-HTML</li>
-      <li>-CSS</li>
-      <li>-bcrypt</li>
-      <li>Punch Card App</li>
-      <li>Project 4</li>
-      <li>Hackathon(?)</li>
-    </ul>
-
+    <div class="container">
+      <h1>Projects</h1>
+      <ul>
+        <li>JavaScript Game</li>
+        <li>Movie Catalogue</li>
+        <li>Punch Card App</li>
+        <li>Project 4</li>
+        <li>Hackathon(?)</li>
+      </ul>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
