--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>William Connelly</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" 
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
+    crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -19,24 +22,54 @@
         </ul>
       </div>
     </nav>
-    <h1>About Me</h1>
-    <h4>Technologies:</h4>
-    <ul>
-      <li>ES6</li>
-      <li>JavaScript</li>
-      <li>HTML5</li>
-      <li>CSS3</li>
-      <li>React</li>
-      <li>express</li>
-      <li>Node.js</li>
-      <li>Mongo</li>
-      <li>postgresql</li>
-      <li>SQL</li>
-      <li>Python</li>
-      <li>Django</li>
-      <li>Materialize</li>
-      <li>jQuery</li>
-    </ul>
+    <div class="container">
+      <h1>About Me</h1>
+      <div>
+        <h4>Languages</h4>
+        <div class="technologies">
+          <ul>
+            <li>
+              <i style="font-size: 5em; color: #e44c27" class="fab fa-html5"></i>
+              <p>HTML5</p>
+            </li>
+            <li>
+              <i style="font-size: 5em; color: #f5de1b" class="fab fa-js-square"></i>
+              <p>JavaScript</p>
+            </li>
+            <li>
+              <i style="font-size: 5em; color: #3c9adc" class="fab fa-css3-alt"></i>
+              <p>CSS3</p>
+            </li>
+            <li>
+              <i style="font-size: 5em; color: #407db0" class="fab fa-python"></i>
+              <p>Python3</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+
+
+
+      <h4>Technologies:</h4>
+      <ul>
+        <li>ES6</li>
+        <li>JavaScript</li>
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>React</li>
+        <li>express</li>
+        <li>Node.js</li>
+        <li>Mongo</li>
+        <li>postgresql</li>
+        <li>SQL</li>
+        <li>Python</li>
+        <li>Django</li>
+        <li>Materialize</li>
+        <li>jQuery</li>
+      </ul>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
