Added Mern icons

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
     crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -24,9 +25,8 @@
     </nav>
     <div class="container">
       <h1>About Me</h1>
-      <div>
-        <h4>Languages</h4>
-        <div class="technologies">
+      <div class="technologies">
+          <h4>Languages</h4>
           <ul>
             <li>
               <i style="font-size: 5em; color: #e44c27" class="fab fa-html5"></i>
@@ -45,25 +45,32 @@
               <p>Python3</p>
             </li>
           </ul>
-        </div>
       </div>
-
-
-
-
-      <h4>Technologies:</h4>
+      <div class="technologies">
+        <h4>MERN Stack</h4>
+          <ul>
+            <li>
+              <i style="font-size:5em;" class="devicon-mongodb-plain colored"></i>
+              <p>mongoDB</p>
+            </li>
+            <li>
+              <i style="font-size: 5em;" class="devicon-express-original colored"></i>
+              <p>Express</p>
+            </li>
+            <li>
+              <i style="font-size: 5em; color: #54c1df" class="fab fa-react"></i>
+              <p>React</p>
+            </li>
+            <li>
+              <i style="font-size: 5em;" class="devicon-nodejs-plain colored"></i>
+              <p>Node.js</p>
+            </li>
+          </ul>
+      </div>
+    </div>
       <ul>
-        <li>ES6</li>
-        <li>JavaScript</li>
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>React</li>
-        <li>express</li>
-        <li>Node.js</li>
-        <li>Mongo</li>
         <li>postgresql</li>
         <li>SQL</li>
-        <li>Python</li>
         <li>Django</li>
         <li>Materialize</li>
         <li>jQuery</li>
