Reorganized tech icons, toying with hover events

--- a/about.html
+++ b/about.html
@@ -6,9 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>William Connelly</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" 
-    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
-    crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -26,56 +23,63 @@
     <div class="container">
       <h1>About Me</h1>
       <div class="technologies">
-          <h4>Languages</h4>
-          <ul>
-            <li>
-              <i style="font-size: 5em; color: #e44c27" class="fab fa-html5"></i>
-              <p>HTML5</p>
-            </li>
-            <li>
-              <i style="font-size: 5em; color: #f5de1b" class="fab fa-js-square"></i>
-              <p>JavaScript</p>
-            </li>
-            <li>
-              <i style="font-size: 5em; color: #3c9adc" class="fab fa-css3-alt"></i>
-              <p>CSS3</p>
-            </li>
-            <li>
-              <i style="font-size: 5em; color: #407db0" class="fab fa-python"></i>
-              <p>Python3</p>
-            </li>
-          </ul>
+        <h4>Front-End</h4>
+        <ul>
+          <li>
+            <i class="devicon-html5-plain colored"></i>
+            <p>HTML5</p>
+          </li>
+          <li>
+            <i class="devicon-javascript-plain colored"></i>
+            <p>JavaScript</p>
+          </li>
+          <li>
+            <i class="devicon-css3-plain colored"></i>
+            <p>CSS3</p>
+          </li>
+          <li>
+            <i class="devicon-react-original colored"></i>
+            <p>React</p>
+          </li>
+          <li>
+            <i class="devicon-jquery-plain colored"></i>
+            <p>jQuery</p>
+          </li>
+        </ul>
       </div>
       <div class="technologies">
-        <h4>MERN Stack</h4>
-          <ul>
-            <li>
-              <i style="font-size:5em;" class="devicon-mongodb-plain colored"></i>
-              <p>mongoDB</p>
-            </li>
-            <li>
-              <i style="font-size: 5em;" class="devicon-express-original colored"></i>
-              <p>Express</p>
-            </li>
-            <li>
-              <i style="font-size: 5em; color: #54c1df" class="fab fa-react"></i>
-              <p>React</p>
-            </li>
-            <li>
-              <i style="font-size: 5em;" class="devicon-nodejs-plain colored"></i>
-              <p>Node.js</p>
-            </li>
-          </ul>
+        <h4>Back-End</h4>
+        <ul>
+          <li>
+            <i class="devicon-nodejs-plain colored"></i>
+            <p>Node.js</p>
+          </li>
+          <li>
+            <i class="devicon-express-original colored"></i>
+            <p>Express</p>
+          </li>
+          <li>
+            <i class="devicon-postgresql-plain colored"></i>
+            <p>PostgreSQL</p>
+          </li>
+          <li>
+            <i class="devicon-sequelize-plain colored"></i>
+            <p>Sequelize</p>
+          </li>
+          <li>
+            <i class="devicon-mongodb-plain colored"></i>
+            <p>mongoDB</p>
+          </li>
+          <li>
+            <i class="devicon-python-plain python-icon"></i>
+            <p>Python3</p>
+          </li>
+          <li>
+            <i class="devicon-django-plain colored"></i>
+            <p>Django</p>
+          </li>
+        </ul>
       </div>
-    </div>
-      <ul>
-        <li>postgresql</li>
-        <li>SQL</li>
-        <li>Django</li>
-        <li>Materialize</li>
-        <li>jQuery</li>
-      </ul>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="script.js"></script>
   </body>
