Added email link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <span style="font-size: 3em;">
         <a href="https://github.com/Williamconnelly"><i class="fab fa-github landing-icon"></i></a>
         <a href="https://www.linkedin.com/in/williamrconnelly/"><i class="fab fa-linkedin landing-icon"></i></a>
+        <a href="mailto:williamconnelly.dev@gmail.com"><i class="fas fa-envelope-square landing-icon"></i></a>
         <a href="#"><i class="fas fa-file-download landing-icon tooltipped" data-position="bottom" data-tooltip="Resume"></i></a>
       </span>
     </div>
