Switched to grid layout for icons

--- a/about.html
+++ b/about.html
@@ -14,72 +14,69 @@
     <nav class="z-depth-0">
       <div class="nav-wrapper">
         <ul id="nav-mobile" class="right">
-            <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="projects.html">Projects</a></li>
         </ul>
       </div>
     </nav>
     <div class="container">
-      <h1>About Me</h1>
-      <div class="technologies">
-        <h4>Front-End</h4>
-        <ul>
-          <li>
-            <i class="devicon-html5-plain colored"></i>
-            <p>HTML5</p>
-          </li>
-          <li>
-            <i class="devicon-javascript-plain colored"></i>
-            <p>JavaScript</p>
-          </li>
-          <li>
-            <i class="devicon-css3-plain colored"></i>
-            <p>CSS3</p>
-          </li>
-          <li>
-            <i class="devicon-react-original colored"></i>
-            <p>React</p>
-          </li>
-          <li>
-            <i class="devicon-jquery-plain colored"></i>
-            <p>jQuery</p>
-          </li>
-        </ul>
+      <h2>About Me</h2>
+      <div class="align">
+        <div class="front-end skillbox">
+            <div class="">
+              <i class="devicon-html5-plain colored"></i>
+              <p>HTML5</p>
+            </div>
+            <div class="">
+              <i class="devicon-javascript-plain colored"></i>
+              <p>JavaScript</p>
+            </div>
+            <div class="">
+              <i class="devicon-css3-plain colored"></i>
+              <p>CSS3</p>
+            </div>
+            <div class="">
+              <i class="devicon-react-original colored"></i>
+              <p>React</p>
+            </div>
+            <div class="">
+              <i class="devicon-jquery-plain colored"></i>
+              <p>jQuery</p>
+            </div>
+        </div>
       </div>
-      <div class="technologies">
-        <h4>Back-End</h4>
-        <ul>
-          <li>
-            <i class="devicon-nodejs-plain colored"></i>
-            <p>Node.js</p>
-          </li>
-          <li>
-            <i class="devicon-express-original colored"></i>
-            <p>Express</p>
-          </li>
-          <li>
-            <i class="devicon-postgresql-plain colored"></i>
-            <p>PostgreSQL</p>
-          </li>
-          <li>
-            <i class="devicon-sequelize-plain colored"></i>
-            <p>Sequelize</p>
-          </li>
-          <li>
-            <i class="devicon-mongodb-plain colored"></i>
-            <p>mongoDB</p>
-          </li>
-          <li>
-            <i class="devicon-python-plain python-icon"></i>
-            <p>Python3</p>
-          </li>
-          <li>
-            <i class="devicon-django-plain colored"></i>
-            <p>Django</p>
-          </li>
-        </ul>
+      <div class="back-end skillbox">
+        <div class="">
+          <i class="devicon-nodejs-plain colored"></i>
+          <p>Node.js</p>
+        </div>
+        <div class="">
+          <i class="devicon-express-original colored"></i>
+          <p>Express</p>
+        </div>
+        <div class="">
+          <i class="devicon-postgresql-plain colored"></i>
+          <p>PostgreSQL</p>
+        </div>
+        <div class="">
+          <i class="devicon-sequelize-plain colored"></i>
+          <p>Sequelize</p>
+        </div>
+        <div class="">
+          <i class="devicon-mongodb-plain colored"></i>
+          <p>mongoDB</p>
+        </div>
+        <div class="">
+          <i class="devicon-python-plain python-icon"></i>
+          <p>Python3</p>
+        </div>
+        <div class="">
+          <i class="devicon-django-plain colored"></i>
+          <p>Django</p>
+        </div>
       </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="script.js"></script>
   </body>
