--- a/projects.html
+++ b/projects.html
@@ -13,19 +13,20 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <nav class="z-depth-0">
-      <div class="nav-wrapper">
-        <ul id="nav-mobile" class="right">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="projects.html">Projects</a></li>
-        </ul>
-      </div>
-    </nav>
     <div class="container">
+      <nav class="z-depth-0">
+        <div class="nav-wrapper">
+          <ul id="nav-mobile" class="right">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+          </ul>
+        </div>
+      </nav>
       <h2>Projects</h2>
       <ul>
         <li>JavaScript Game</li>
+        <img class="responsive-img preview-image" style="border-radius: 1em;" src="danmaku.png" alt="Danmaku Game">
         <li>Movie Catalogue</li>
         <li>Punch Card App</li>
         <li>Project 4</li>
