Added grid style to projects page

--- a/projects.html
+++ b/projects.html
@@ -23,15 +23,22 @@
           </ul>
         </div>
       </nav>
-      <h2>Projects</h2>
-      <ul>
-        <li>JavaScript Game</li>
-        <img class="responsive-img preview-image" style="border-radius: 1em;" src="danmaku.png" alt="Danmaku Game">
-        <li>Movie Catalogue</li>
+      <div class="project-box">
+        <img class="responsive-img preview-image danmaku" style="border-radius: 1em;" src="danmaku.png" alt="Danmaku Game">
+        <h4>Title</h4>
+        <div>
+          <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/">LIVE SITE</a>
+          <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project">CODE</a>
+        </div>
+        <p>Description</p>
+        <p>Technologies</p>
+
+
+      </div>
+        <!-- <li>Movie Catalogue</li>
         <li>Punch Card App</li>
         <li>Project 4</li>
-        <li>Hackathon(?)</li>
-      </ul>
+        <li>Hackathon(?)</li> -->
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="script.js"></script>
