Finished project box layout

--- a/projects.html
+++ b/projects.html
@@ -23,17 +23,46 @@
           </ul>
         </div>
       </nav>
+      <h2>Projects</h2>
       <div class="project-box">
-        <img class="responsive-img preview-image danmaku" style="border-radius: 1em;" src="danmaku.png" alt="Danmaku Game">
-        <h4>Title</h4>
-        <div>
-          <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/">LIVE SITE</a>
-          <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project">CODE</a>
+        <img class="responsive-img preview-image danmaku-img" style="border-radius: 1em;" src="danmaku.png" alt="Danmaku Game">
+        <div class="danmaku-title">
+          <h4>Danmaku</h4>
         </div>
-        <p>Description</p>
-        <p>Technologies</p>
-
-
+        <div class="danmaku-buttons">
+          <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/" target="_blank">LIVE SITE</a>
+          <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project" target="_blank">CODE</a>
+        </div>
+        <div class="danmaku-desc">
+          <span>Javascript game made in the style of a classic arcade shooter</span>
+        </div>
+        <div class="danmaku-tech">
+          <ul>
+            <li>HTML</li>
+            <li>Javascript</li>
+            <li>CSS3</li>
+          </ul>
+        </div>
+      </div>
+      <div class="project-box">
+        <img class="responsive-img preview-image danmaku-img" style="border-radius: 1em;" src="movielist.png" alt="Danmaku Game">
+        <div class="danmaku-title">
+          <h4>MovieList</h4>
+        </div>
+        <div class="danmaku-buttons">
+          <a class="project-button" href="https://github.com/Williamconnelly/movielist" target="_blank">LIVE SITE</a>
+          <a class="project-button" href="https://express-movielist.herokuapp.com/" target="_blank">CODE</a>
+        </div>
+        <div class="danmaku-desc">
+          <span>Movie cataloguing and rating site. Search, Find, Add, and Rate your favorite movies</span>
+        </div>
+        <div class="danmaku-tech">
+          <ul>
+            <li>HTML</li>
+            <li>Javascript</li>
+            <li>CSS3</li>
+          </ul>
+        </div>
       </div>
         <!-- <li>Movie Catalogue</li>
         <li>Punch Card App</li>
