Added movielist to projects

--- a/projects.html
+++ b/projects.html
@@ -41,11 +41,12 @@
             <li>HTML</li>
             <li>Javascript</li>
             <li>CSS3</li>
+            <li>jQuery</li>
           </ul>
         </div>
       </div>
       <div class="project-box">
-        <img class="responsive-img preview-image danmaku-img" style="border-radius: 1em;" src="movielist.png" alt="Danmaku Game">
+        <img class="responsive-img preview-image movielist-img" style="border-radius: 1em;" src="movielist.png" alt="Danmaku Game">
         <div class="danmaku-title">
           <h4>MovieList</h4>
         </div>
@@ -58,9 +59,10 @@
         </div>
         <div class="danmaku-tech">
           <ul>
-            <li>HTML</li>
-            <li>Javascript</li>
-            <li>CSS3</li>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>PostgreSQL</li>
+            <li>Sequelize</li>
           </ul>
         </div>
       </div>
