--- a/projects.html
+++ b/projects.html
@@ -25,13 +25,13 @@
       </nav>
       <h2>Projects</h2>
       <div class="project-box">
-        <img class="responsive-img preview-image danmaku-img" style="border-radius: 1em;" src="danmaku.png" alt="Danmaku Game">
+        <img class="responsive-img preview-image danmaku-img" src="danmaku.png" alt="Danmaku Game">
         <div class="danmaku-title">
           <h4>Danmaku</h4>
         </div>
         <div class="danmaku-buttons">
-          <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/" target="_blank">LIVE SITE</a>
-          <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project" target="_blank">CODE</a>
+          <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project" target="_blank">LIVE SITE</a>
+          <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/" target="_blank">CODE</a>
         </div>
         <div class="danmaku-desc">
           <span>Javascript game made in the style of a classic arcade shooter</span>
@@ -46,13 +46,13 @@
         </div>
       </div>
       <div class="project-box">
-        <img class="responsive-img preview-image movielist-img" style="border-radius: 1em;" src="movielist.png" alt="Danmaku Game">
+        <img class="responsive-img preview-image movielist-img" src="movielist.png" alt="MovieList">
         <div class="danmaku-title">
           <h4>MovieList</h4>
         </div>
         <div class="danmaku-buttons">
-          <a class="project-button" href="https://github.com/Williamconnelly/movielist" target="_blank">LIVE SITE</a>
-          <a class="project-button" href="https://express-movielist.herokuapp.com/" target="_blank">CODE</a>
+          <a class="project-button" href="https://express-movielist.herokuapp.com/" target="_blank">LIVE SITE</a>
+          <a class="project-button" href="https://github.com/Williamconnelly/movielist" target="_blank">CODE</a>
         </div>
         <div class="danmaku-desc">
           <span>Movie cataloguing and rating site. Search, Find, Add, and Rate your favorite movies</span>
@@ -66,10 +66,28 @@
           </ul>
         </div>
       </div>
-        <!-- <li>Movie Catalogue</li>
-        <li>Punch Card App</li>
-        <li>Project 4</li>
-        <li>Hackathon(?)</li> -->
+      <div class="project-box">
+        <img class="responsive-img preview-image punchcard-img" src="punchcard.png" alt="PunchCard">
+        <div class="danmaku-title">
+          <h4>Punch Card</h4>
+        </div>
+        <div class="danmaku-buttons">
+          <a class="project-button" href="https://punch-card.herokuapp.com/" target="_blank">LIVE SITE</a>
+          <a class="project-button" href="https://github.com/Williamconnelly/punch-card" target="_blank">CODE</a>
+        </div>
+        <div class="danmaku-desc">
+          <span>A proof-of-concept app which allows users to punch digitized, restaurant reward cards.</span>
+        </div>
+        <div class="danmaku-tech">
+          <ul>
+            <li>React</li>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+            <li>Mongoose</li>
+          </ul>
+        </div>
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="script.js"></script>
