Added background animation and changed color theme

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,7 @@
           </ul>
         </div>
       </div>
+      <hr class="style18">
       <div class="project-box">
         <img class="responsive-img preview-image movielist-img" src="movielist.png" alt="MovieList">
         <div class="danmaku-title">
