Added hr's and headlines. Changed bg gradient

--- a/about.html
+++ b/about.html
@@ -21,57 +21,61 @@
           </ul>
         </div>
       </nav>
-      <h2>About Me</h2>
-      <div class="front-end skillbox">
-        <div class="">
-          <i class="devicon-html5-plain colored"></i>
-          <p>HTML5</p>
+      <h2 class="headline4">About Me</h2>
+      <div class="skill-container">
+        <h6>Technologies</h6>
+        <hr />
+        <div class="front-end skillbox">
+          <div class="">
+            <i class="devicon-html5-plain colored"></i>
+            <p>HTML5</p>
+          </div>
+          <div class="">
+            <i class="devicon-javascript-plain colored"></i>
+            <p>JavaScript</p>
+          </div>
+          <div class="">
+            <i class="devicon-css3-plain colored"></i>
+            <p>CSS3</p>
+          </div>
+          <div class="">
+            <i class="devicon-react-original colored"></i>
+            <p>React</p>
+          </div>
+          <div class="">
+            <i class="devicon-jquery-plain colored"></i>
+            <p>jQuery</p>
+          </div>
         </div>
-        <div class="">
-          <i class="devicon-javascript-plain colored"></i>
-          <p>JavaScript</p>
-        </div>
-        <div class="">
-          <i class="devicon-css3-plain colored"></i>
-          <p>CSS3</p>
-        </div>
-        <div class="">
-          <i class="devicon-react-original colored"></i>
-          <p>React</p>
-        </div>
-        <div class="">
-          <i class="devicon-jquery-plain colored"></i>
-          <p>jQuery</p>
-        </div>
-      </div>
-      <div class="back-end skillbox">
-        <div class="">
-          <i class="devicon-nodejs-plain colored"></i>
-          <p>Node.js</p>
-        </div>
-        <div class="">
-          <i class="devicon-express-original colored"></i>
-          <p>Express</p>
-        </div>
-        <div class="">
-          <i class="devicon-postgresql-plain colored"></i>
-          <p>PostgreSQL</p>
-        </div>
-        <div class="">
-          <i class="devicon-sequelize-plain colored"></i>
-          <p>Sequelize</p>
-        </div>
-        <div class="">
-          <i class="devicon-mongodb-plain colored"></i>
-          <p>mongoDB</p>
-        </div>
-        <div class="">
-          <i class="devicon-python-plain python-icon"></i>
-          <p>Python3</p>
-        </div>
-        <div class="">
-          <i class="devicon-django-plain colored"></i>
-          <p>Django</p>
+        <div class="back-end skillbox">
+          <div class="">
+            <i class="devicon-nodejs-plain colored"></i>
+            <p>Node.js</p>
+          </div>
+          <div class="">
+            <i class="devicon-express-original colored"></i>
+            <p>Express</p>
+          </div>
+          <div class="">
+            <i class="devicon-postgresql-plain colored"></i>
+            <p>PostgreSQL</p>
+          </div>
+          <div class="">
+            <i class="devicon-sequelize-plain colored"></i>
+            <p>Sequelize</p>
+          </div>
+          <div class="">
+            <i class="devicon-mongodb-plain colored"></i>
+            <p>mongoDB</p>
+          </div>
+          <div class="">
+            <i class="devicon-python-plain python-icon"></i>
+            <p>Python3</p>
+          </div>
+          <div class="">
+            <i class="devicon-django-plain colored"></i>
+            <p>Django</p>
+          </div>
         </div>
       </div>
     </div>
