--- a/projects.html
+++ b/projects.html
@@ -23,15 +23,15 @@
           </ul>
         </div>
       </nav>
-      <h2>Projects</h2>
+      <h2 class="headline4">Projects</h2>
       <div class="project-box">
         <img class="responsive-img preview-image danmaku-img" src="danmaku.png" alt="Danmaku Game">
         <div class="danmaku-title">
           <h4>Danmaku</h4>
         </div>
         <div class="danmaku-buttons">
-          <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project" target="_blank">LIVE SITE</a>
-          <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/" target="_blank">CODE</a>
+          <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/" target="_blank">LIVE SITE</a>
+          <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project" target="_blank">CODE</a>
         </div>
         <div class="danmaku-desc">
           <span>Javascript game made in the style of a classic arcade shooter</span>
@@ -45,7 +45,7 @@
           </ul>
         </div>
       </div>
-      <hr class="style18">
+      <hr class="style" />
       <div class="project-box">
         <img class="responsive-img preview-image movielist-img" src="movielist.png" alt="MovieList">
         <div class="danmaku-title">
@@ -67,6 +67,7 @@
           </ul>
         </div>
       </div>
+      <hr class="style" />
       <div class="project-box">
         <img class="responsive-img preview-image punchcard-img" src="punchcard.png" alt="PunchCard">
         <div class="danmaku-title">
