Organized files into folder. Began detailing about page

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
   </head>
   <body>
     <div class="container">
@@ -22,6 +22,16 @@
         </div>
       </nav>
       <h2 class="headline4">About Me</h2>
+      <div class="about-container">
+        <div class="about-img">
+          <img class="responsive-img" src="static/img/cropheadshot.jpg" alt="William Connelly">
+        </div>
+        <div class="about-desc">
+          <p>Hi, I'm Will!</p>
+          <p>I'm a writer turned web-developer based out of the Seattle area.</p>
+          <p>I enjoy making full-stack applications </p>
+        </div>
+      </div>
       <div class="skill-container">
         <h6>Technologies</h6>
         <hr />
@@ -80,6 +90,6 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="script.js"></script>
+    <script src="static/js/script.js"></script>
   </body>
 </html>
