--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
     crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
   </head>
   <body>
     <div class="container">
@@ -34,6 +34,6 @@
       </span>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="script.js"></script>
+    <script src="static/js/script.js"></script>
   </body>
 </html>
