--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
     crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
   </head>
   <body>
     <div class="container">
@@ -25,18 +25,18 @@
       </nav>
       <h2 class="headline4">Projects</h2>
       <div class="project-box">
-        <img class="responsive-img preview-image danmaku-img" src="danmaku.png" alt="Danmaku Game">
-        <div class="danmaku-title">
+        <img class="responsive-img preview-image danmaku-img" src="static/img/danmaku.png" alt="Danmaku Game">
+        <div class="project-title">
           <h4>Danmaku</h4>
         </div>
-        <div class="danmaku-buttons">
+        <div class="project-buttons">
           <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/" target="_blank">LIVE SITE</a>
           <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project" target="_blank">CODE</a>
         </div>
-        <div class="danmaku-desc">
+        <div class="project-desc">
           <span>Javascript game made in the style of a classic arcade shooter</span>
         </div>
-        <div class="danmaku-tech">
+        <div class="project-tech">
           <ul>
             <li>HTML</li>
             <li>Javascript</li>
@@ -47,18 +47,18 @@
       </div>
       <hr class="style" />
       <div class="project-box">
-        <img class="responsive-img preview-image movielist-img" src="movielist.png" alt="MovieList">
-        <div class="danmaku-title">
+        <img class="responsive-img preview-image movielist-img" src="static/img/movielist.png" alt="MovieList">
+        <div class="project-title">
           <h4>MovieList</h4>
         </div>
-        <div class="danmaku-buttons">
+        <div class="project-buttons">
           <a class="project-button" href="https://express-movielist.herokuapp.com/" target="_blank">LIVE SITE</a>
           <a class="project-button" href="https://github.com/Williamconnelly/movielist" target="_blank">CODE</a>
         </div>
-        <div class="danmaku-desc">
+        <div class="project-desc">
           <span>Movie cataloguing and rating site. Search, Find, Add, and Rate your favorite movies</span>
         </div>
-        <div class="danmaku-tech">
+        <div class="project-tech">
           <ul>
             <li>Node.js</li>
             <li>Express</li>
@@ -69,18 +69,18 @@
       </div>
       <hr class="style" />
       <div class="project-box">
-        <img class="responsive-img preview-image punchcard-img" src="punchcard.png" alt="PunchCard">
-        <div class="danmaku-title">
+        <img class="responsive-img preview-image punchcard-img" src="static/img/punchcard.png" alt="PunchCard">
+        <div class="project-title">
           <h4>Punch Card</h4>
         </div>
-        <div class="danmaku-buttons">
+        <div class="project-buttons">
           <a class="project-button" href="https://punch-card.herokuapp.com/" target="_blank">LIVE SITE</a>
           <a class="project-button" href="https://github.com/Williamconnelly/punch-card" target="_blank">CODE</a>
         </div>
-        <div class="danmaku-desc">
+        <div class="project-desc">
           <span>A proof-of-concept app which allows users to punch digitized, restaurant reward cards.</span>
         </div>
-        <div class="danmaku-tech">
+        <div class="project-tech">
           <ul>
             <li>React</li>
             <li>Node.js</li>
@@ -92,6 +92,6 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="script.js"></script>
+    <script src="static/js/script.js"></script>
   </body>
 </html>
