Added further text to about me page

--- a/about.html
+++ b/about.html
@@ -29,7 +29,9 @@
         <div class="about-desc">
           <p>Hi, I'm Will!</p>
           <p>I'm a writer turned web-developer based out of the Seattle area.</p>
-          <p>I enjoy making full-stack applications </p>
+          <p>I enjoy designing web applications with a variety of technologies but currently I 
+          am most interested in React. Please do <a href="index.html">reach out to me </a>if you're
+          looking for a developer</p>
         </div>
       </div>
       <div class="skill-container">
