--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <a href="https://github.com/Williamconnelly"><i class="fab fa-github landing-icon"></i></a>
         <a href="https://www.linkedin.com/in/williamrconnelly/"><i class="fab fa-linkedin landing-icon"></i></a>
         <a href="mailto:williamconnelly.dev@gmail.com"><i class="fas fa-envelope-square landing-icon"></i></a>
-        <a href="#"><i class="fas fa-file-download landing-icon tooltipped" data-position="bottom" data-tooltip="Resume"></i></a>
-        <!-- <a href="" target="_blank">Open PDF</a> -->
+        <a href="static/img/WilliamConnelly-Resume.pdf" target="_blank"><i class="fas fa-file-download 
+        landing-icon tooltipped" data-position="bottom" data-tooltip="Resume"></i></a>
       </span>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
